--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="cows_and_bulls">Cows And Bulls</string>
     <string name="guess">Guess</string>
     <string name="what_number_do_you_think_it_is">what number do you think it is?</string>
+    <string name="numberWithTwoDots">Number:</string>
 </resources>
