--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="guess">Guess</string>
     <string name="what_number_do_you_think_it_is">what number do you think it is?</string>
     <string name="numberWithTwoDots">Number:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
